<resources>
    <string name="app_name">Cloud Ladder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_sign_out">SIGN OUT</string>
    <string name="action_about">About</string>
    <string name="action_vpn">VPN</string>
    <string name="others">Others</string>
    <string name="forget_password">FORGET PASSWORD</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <plurals name="bytes">
        <item quantity="one">Byte</item>
        <item quantity="other">Bytes</item>
    </plurals>
    <string name="string_placeholder">%s</string>
    <string name="stop">Stop</string>
    <string name="shut_down">Shutting down&#8230;</string>
    <string name="invalid_server">Invalid server name</string>
    <string name="service_failed">Failed to connect the remote server</string>
    <string name="reboot_required">Failed to start VPN service. You might need to reboot your device.</string>
    <string name="forward_success">VPN started.</string>
    <string name="traffic_summary">%1$s/s↑\t%2$s/s↓</string>
    <string name="stat_summary">Sent: \t\t\t\t\t%3$s\t↑\t%1$s/s\nReceived: \t%4$s\t↓\t%2$s/s</string>
    <string name="error_invalid_email">Enter a valid email address</string>
    <string name="error_password_too_short">Password must be at least 6 characters.</string>
    <string name="error_email_required">Email is required.</string>
    <string name="connect">connect</string>
    <string name="connecting">connecting</string>
    <string name="connected">connected</string>
    <string name="stopping">stopping</string>
    <string name="infinity">INFINITY</string>
    <string name="us">US</string>
    <string name="hk">HK</string>
    <string name="jp">JP</string>

    <string name="feature_category">Server Settings</string>
    <string name="sp_key_route">pref_key_route_mode</string>
    <string name="mode">Mode</string>
    <string name="global_mode">Global Mode</string>
    <string name="global_mode_summary">All traffic go through by VPN.</string>
    <string name="auto_mode">Auto Proxy Mode</string>
    <string name="auto_mode_summary">Chinese sites not go through by VPN.</string>

    <string-array name="vpn_tabs">
        <item>DASHBOARD</item>
        <item>SETTING</item>
    </string-array>
</resources>
