<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/horizontal_margin"
        android:paddingRight="@dimen/horizontal_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/ic_cloudist_logo" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/input_email"
            style="@style/InputInfoEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:met_iconLeft="@drawable/ic_mail" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/input_password"
            style="@style/InputInfoEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:met_iconLeft="@drawable/ic_lock" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_forget_password"
            style="@style/NormalBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:text="@string/forget_password" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_sign_in"
            style="@style/NormalBtn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/btn_submit"
            android:enabled="false"
            android:text="@string/action_sign_in" />
    </LinearLayout>
</RelativeLayout>